--- a/mercasoft/package.json
+++ b/mercasoft/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
+    "react-browser-router": "^2.1.2",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1",
+    "react-router-dom": "^6.26.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.3",
     "sweetalert2-react-content": "^5.0.7"
