--- a/node/package.json
+++ b/node/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.2",
     "sequelize": "^6.37.3",
-    "start": "^5.1.0"
+    "start": "^5.1.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
