--- a/mercasoft/.gitignore
+++ b/mercasoft/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Ignorar archivos de entorno
+.env
+
+# Ignorar la carpeta node_modules en cualquier parte del proyecto
+node_modules/
+
 # User-specific files
 *.rsuser
 *.suo
