--- a/node/package.json
+++ b/node/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "express-winston": "^4.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
-    "sequelize": "^6.37.3",
+    "sequelize": "6.37.3",
     "winston": "^3.13.1",
     "winston-daily-rotate-file": "^5.0.0"
   }
