--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
     "nodemon": "^3.1.4",
+    "react-router-dom": "^6.26.0",
     "start": "^5.1.0",
     "winston": "^3.13.1",
     "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "vite": "^5.4.0"
   }
 }
