--- a/mercasoft/package.json
+++ b/mercasoft/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
@@ -17,6 +20,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-browser-router": "^2.1.2",
+    "react-client-session": "^0.0.8",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "sort-by": "^1.2.0",
