--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
-    "nodemon": "^3.1.4",
-    "start": "^5.1.0",
-    "winston": "^3.13.1",
-    "winston-daily-rotate-file": "^5.0.0"
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7"
   }
 }
