--- a/node/package.json
+++ b/node/package.json
@@ -24,7 +24,7 @@
     "nodemon": "^3.1.2",
     "sequelize": "^6.37.3",
     "start": "^5.1.0",
+    "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
   }
 }
-
