--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# HOLA CAMBIOS
 # User-specific files
 *.env
 *.rsuser
