--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "canvas-confetti": "^1.9.3",
+    "datatables.net-dt": "^2.1.5",
+    "datatables.net-responsive-dt": "^3.0.3",
     "dotenv": "^16.4.5",
+    "jquery": "^3.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.12.3",
