--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "canvas-confetti": "^1.9.3",
-    "datatables.net-dt": "^2.1.5",
+    "datatables.net": "^2.1.6",
+    "datatables.net-dt": "^2.1.6",
     "datatables.net-responsive-dt": "^3.0.3",
     "dotenv": "^16.4.5",
     "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
@@ -27,8 +30,10 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "sort-by": "^1.2.0",
+    "sql.js": "^1.11.0",
     "sweetalert2": "^11.12.3",
-    "sweetalert2-react-content": "^5.0.7"
+    "sweetalert2-react-content": "^5.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
