--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,15 @@
   "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "datatables.net": "^2.1.6",
+    "datatables.net-dt": "^2.1.6",
+    "datatables.net-responsive-dt": "^3.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.9",
     "nodemailer": "^6.9.14",
