--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-client-session": "^0.0.8",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
