--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,12 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.26.2",
+    "react-table": "^7.8.0",
     "sort-by": "^1.2.0",
     "sql.js": "^1.11.0",
     "sweetalert2": "^11.12.3",
