--- a/backend/.env.txt
+++ b/backend/.env.txt
@@ -1,7 +1,16 @@
-JWT_LLAVE = 
+JWT_LLAVE=
+PORT=
 DB_NAME=
 DB_USER=
 DB_PASSWORD=
 DB_HOST=
 DB_DIALECT=
 DB_PORT=
+
+EMAIL_SERVICE=
+EMAIL_USER=
+EMAIL_PASSWORD=
+
+FRONTEND_URL=
+
+RESET_PASSWORD_TOKEN_EXPIRATION=
