Software si listo para build ya

--- a/backend/.env
+++ b/backend/.env
@@ -11,6 +11,6 @@ EMAIL_SERVICE=gmail
 EMAIL_USER=mercasoftx@gmail.com
 EMAIL_PASSWORD=oyzb yihp qqex ymmq
 
-FRONTEND_URL=http://localhost:5174
+FRONTEND_URL=http://149.50.137.66:5173
 
 RESET_PASSWORD_TOKEN_EXPIRATION=1h
